Ticket #4876 - Artifcier Padding/Margin Spacing issue in RTL Language Mods.

--- a/modules/boonex/artificer/data/template/system/css/forms.css
+++ b/modules/boonex/artificer/data/template/system/css/forms.css
@@ -145,6 +145,10 @@ import url(../../../../../../../template/css/forms.css);
 
     margin: 0 0.5rem;
 }
+.bx-dir-rtl.bx-artificer .bx-form-input-wrapper-password > a {
+    left: 0;
+    right: auto;
+}
 .bx-artificer .bx-form-input-password {
     position: relative;
 
@@ -167,6 +171,7 @@ import url(../../../../../../../template/css/forms.css);
     outline: none;
     box-shadow: none;
 }
+
 
 /*-- Form field: Slider/Doublerange --*/
 .bx-form-input-wrapper-slider,
@@ -236,6 +241,11 @@ import url(../../../../../../../template/css/forms.css);
 .bx-artificer .bx-form-input-wrapper-radio_set label {
     margin-left: 0.5rem;
     vertical-align: text-bottom;
+}
+.bx-dir-rtl .bx-form-input-wrapper-checkbox_set label,
+.bx-dir-rtl.bx-artificer .bx-form-input-wrapper-radio_set label {
+    margin-left: 0;
+    margin-right: 0.5rem;
 }
 
 
