--- a/template/css/tailwind.css
+++ b/template/css/tailwind.css
@@ -842,6 +842,9 @@
         @apply block w-full pl-3 py-2 pr-8;
         @apply rounded-md;
     }
+    .bx-artificer .bx-form-input-wrapper-password .bx-form-input-password {
+        @apply ltr:pl-3 rtl:pl-8 ltr:pr-8 rtl:pr-3;
+    }
 
     /* Common elements: Forms: Checkbox/Radio Set Input */
     .bx-artificer .bx-form-input-wrapper-checkbox_set,
